# simple-rag

./: README.org  pyproject.toml  simple_rag.py
tests/: test_simple_rag.py
